# 2025_motionsick_logger_cpp

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: shared_structs.hpp
logger/: csv_logger.cpp  csv_logger.hpp  database_logger.cpp  database_logger.hpp  estimate_heart_rate_from_rgb.cpp  estimate_heart_rate_from_rgb.hpp
python/: camera_preview.py  face_processor.py
sensors/: gps_thread.cpp  gps_thread.hpp  imu_thread.cpp  imu_thread.hpp  socket_receiver.cpp  socket_receiver.hpp  threadsafe_queue.hpp
ui/: toggle_window.cpp  toggle_window.hpp  touch_interface.cpp
